* 1.0.3 *

* Use FreeTDS 1.0rc5 for cross compile windows gems.


* 1.0.2 *

* Cross compile w/2.3.0 using rake-compiler-dock ~> 0.5.1. Fixes #268 #270.
* Use FreeTDS 1.0rc4 for cross compile windows gems.


* 1.0.1 *

* Fix ruby exe's in non-platform gem.


* 1.0.0 *

* Tested with FreeTDS 1.0.
* Add emoji support by default using FreeTDS v1.0 in docs.


* 0.9.5 * (release candidates only)

* Binstub wrappers for `tsql`. Fixes #227 #251
* Add support for 2008 data types. Must use TDSVER 7.3 or higher. Fixes #244 #251
  - [date]
  - [datetime2]
  - [datetimeoffset]
  - [time]
* Default FreeTDS to 0.95. Support 0.91 Alternate Fixes #233
  - Allow our `tds_version` to mirror TDSVER env var. Ex '7.3' vs '73'.
  - Change error handler for `SYBEICONVO` to hard return INT_CANCEL.
* Made sure Azure logins are user@short vs. long domain. Fixes #229
* Removed Ruby 1.9.3 from CI builds.
* CI now tests Azure too.
* Fixed compiler warnings on all platforms. Fixed #241
* FreeTDS - Remove support for bad iconv.


* 0.7.0 *

* Refactor build of FreeTDS & Iconv recipes. Add OpenSSL. Merged #207.
* Ensure zero terminated strings, where C-str pointers are expected. Use StringValueCStr() Fixes #208.
* Revert 999fa571 so timeouts do not kill the client. Fixes #179.
* Remove `sspi_w_kerberos.diff` patch. Not needed anymore.
* Tested again on Azure. Added notes to README on recommended settings.
* Replace `rb_thread_blocking_region` (removed in Ruby 2.2.0) w/`rb_thread_call_without_gvl`. Fixes #182.
* Remove 30 char password warning. Fixes #172.
* Remove Ruby 1.8.6 support. We always use Time vs edge case DateTime.


* 0.6.2 *

* Support an optional environment variable to find FreeTDS. Fixes #128.
* Allow Support for 31+ Character Usernames/Passwords. Fixes #134. Thanks @wbond.
* Stronger Global VM Lock support for nonblocking connections. Fixes #133. Thanks @wbond.
* Timeout fix for working with Azure SQL. Fixes #138.